// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.toThrowWithMessage fails when a callback function is not a function 1`] = `
"expect(function).toThrowWithMessage(type, message)

Received value must be a function but instead \\"2\\" was found"
`;

exports[`.toThrowWithMessage fails when a callback provided doesnt throw an error 1`] = `
"Expected the function to throw an error.
But it didn't throw anything."
`;

exports[`.toThrowWithMessage fails when a wrong type of error is thrown 1`] = `
"expect(function).toThrowWithMessage(type, message)

Expected to throw:
  [TypeError: Expected message]
Thrown:
  [SyntaxError: Expected message]
"
`;

exports[`.toThrowWithMessage fails when callback function is not provided 1`] = `
"expect(function).toThrowWithMessage(type, message)

Received value must be a function but instead \\"undefined\\" was found"
`;

exports[`.toThrowWithMessage fails when error message is not provided 1`] = `
"expect(function).toThrowWithMessage(type, message)

 Message argument is required. "
`;

exports[`.toThrowWithMessage fails when error message provided is not a string or regex 1`] = `
"expect(function).toThrowWithMessage(type, message)

Unexpected argument for message
Expected: \\"string\\" or \\"regexp
Got: \\"2\\""
`;

exports[`.toThrowWithMessage fails when error type is not provided 1`] = `
"expect(function).toThrowWithMessage(type, message)

Expected type to be a function but instead \\"undefined\\" was found"
`;

exports[`.toThrowWithMessage passes when given an Error with a regex error message 1`] = `
"expect(function).not.toThrowWithMessage(type, message)

Expected not to throw:
  [TypeError: /Expected message/]
Thrown:
  [TypeError: Expected message]
"
`;

exports[`.toThrowWithMessage passes when given an Error with a string error message 1`] = `
"expect(function).not.toThrowWithMessage(type, message)

Expected not to throw:
  [TypeError: Expected message]
Thrown:
  [TypeError: Expected message]
"
`;
